issues resolved related loaders, address, login

--- a/src/app/features/auth/_components/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/_components/forgot-password/forgot-password.component.html
@@ -17,7 +17,7 @@
 
     <div class="form-group" *ngIf="form.value.otp_type === 'mobile'">
       <label>Mobile</label>
-      <input type="text" formControlName="mobile" placeholder="Enter mobile number" />
+      <input type="number" formControlName="mobile" placeholder="Enter mobile number" />
     </div>
   </ng-container>
 
