--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb></app-breadcrumb>
+
 <div class="cart-container">
   <!-- Show if cart has items -->
   <ng-container *ngIf="cartItemsSignal()?.length! > 0; else emptyCart">
