--- a/src/app/features/cart/_components/wishlist/wishlist.component.html
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb></app-breadcrumb>
+
 <div class="wishlist-container">
   <!-- ✅ Wishlist Header -->
   <div class="wishlist-header">
