--- a/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.scss
+++ b/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.scss
@@ -1,7 +1,7 @@
 .product-container {
   display: grid;
   gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   justify-content: center;
   padding: 10px;
 
