--- a/src/app/shared/components/order-success-dialog/order-success-dialog.component.scss
+++ b/src/app/shared/components/order-success-dialog/order-success-dialog.component.scss
@@ -13,6 +13,12 @@
     color: #444;
   }
 
+  .contact-us {
+    text-decoration: underline;
+    color: #682f12;
+    cursor: pointer;
+  }
+
   .dialog-actions {
     margin-top: 1.5rem;
     display: flex;
