--- a/src/app/features/auth/_components/sign-up/sign-up.component.scss
+++ b/src/app/features/auth/_components/sign-up/sign-up.component.scss
@@ -66,7 +66,8 @@
 
     .password-container input {
       flex: 1;
-      padding-right: 35px; /* Space for the eye icon */
+      padding-right: 35px;
+      /* Space for the eye icon */
     }
 
     .eye-icon {
@@ -136,6 +137,7 @@
     from {
       transform: rotate(0deg);
     }
+
     to {
       transform: rotate(360deg);
     }
@@ -155,4 +157,26 @@
       text-decoration: underline;
     }
   }
+
+  .loader.mini {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: 2px solid #ccc;
+    border-top: 2px solid #682f12; // Kalagura Gampa brown
+    border-radius: 50%;
+    animation: spin 0.6s linear infinite;
+    margin-left: 6px;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 }
