--- a/src/app/features/auth/_components/signin/signin.component.scss
+++ b/src/app/features/auth/_components/signin/signin.component.scss
@@ -71,6 +71,25 @@
   }
 }
 
+.change-number-link {
+  display: inline-flex;
+  align-items: center;
+  font-size: 0.875rem;
+  color: #682f12;
+  cursor: pointer;
+  margin-top: 6px;
+
+  .edit-icon {
+    font-size: 16px;
+    margin-right: 4px;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+
 .btn-signin {
   width: 100%;
   padding: 10px;
