--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -73,7 +73,7 @@
   <!-- Footer Bottom Section -->
   <div class="footer-bottom">
     <div class="footer-left">
-      <span>&copy; 2025 Kalagura Gampa (a Gayathri Enterprises). All Rights Reserved.</span>
+      <span>&copy; {{ currentYear }} Kalagura Gampa (a Gayathri Enterprises). All Rights Reserved.</span>
     </div>
     <div class="footer-right">
       <div class="social-links">
