--- a/src/app/shared/components/page-not-found/page-not-found.component.scss
+++ b/src/app/shared/components/page-not-found/page-not-found.component.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   text-align: center;
   padding: 2rem;
-  background-color: #fffaf4;
+  // background-color: #fffaf4;
   font-family: 'Segoe UI', sans-serif;
 
   img {
