--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div class="not-found-container">
-  <img src="../../../../assets/images/404-illustration.webp" alt="Page Not Found" />
+  <img src="../../../../assets/images/404.webp" alt="Page Not Found" />
 
   <h1>Oops! Page not found.</h1>
   <p>The page you’re looking for doesn’t exist or was moved.</p>
