remove breadcrumb in checkout page

--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb></app-breadcrumb>
+<app-breadcrumb *ngIf="showPriceSummaryBlock"></app-breadcrumb>
 
 <div class="cart-container">
   <!-- Show if cart has items -->
