--- a/src/app/features/auth/_components/sign-up/sign-up.component.scss
+++ b/src/app/features/auth/_components/sign-up/sign-up.component.scss
@@ -158,7 +158,23 @@
     }
   }
 
-  .loader.mini {
+  .change-number-container {
+    margin-top: 2px;
+
+    .change {
+      font-size: 13px;
+      color: #007bff;
+      font-weight: bold;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+
+  .mini {
     display: inline-block;
     width: 14px;
     height: 14px;
