--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -82,7 +82,6 @@
 
     .rating-cart-wrapper {
       display: flex;
-      justify-content: space-between;
       align-items: center;
 
       .product-rating {
@@ -91,6 +90,7 @@
       }
 
       .add-to-cart-wrapper {
+        margin-left: auto; // Push to extreme right
         position: relative;
         cursor: pointer;
 
@@ -110,7 +110,7 @@
         .tooltip {
           position: absolute;
           bottom: 125%;
-          left: 40%;
+          left: 50%;
           transform: translateX(-50%);
           background-color: #333;
           color: #fff;
@@ -129,35 +129,36 @@
       }
     }
   }
-}
 
-@keyframes bounce {
 
-  0%,
-  100% {
-    transform: translateY(0);
+  @keyframes bounce {
+
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+
+    30% {
+      transform: translateY(-5px);
+    }
+
+    60% {
+      transform: translateY(0px);
+    }
   }
 
-  30% {
-    transform: translateY(-5px);
+  .spinner.mini {
+    width: 16px;
+    height: 16px;
+    border: 2px solid #ccc;
+    border-top: 2px solid #333;
+    border-radius: 50%;
+    animation: spin 0.6s linear infinite;
   }
 
-  60% {
-    transform: translateY(0px);
-  }
-}
-
-.spinner.mini {
-  width: 16px;
-  height: 16px;
-  border: 2px solid #ccc;
-  border-top: 2px solid #333;
-  border-radius: 50%;
-  animation: spin 0.6s linear infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
