--- a/src/app/features/settings/_components/order-card/order-card.component.html
+++ b/src/app/features/settings/_components/order-card/order-card.component.html
@@ -7,9 +7,9 @@
           📋
         </button>
       </div>
-      <div class="order-date">Placed on {{ item.created_at | date: 'd MMMM y' }}</div>
+      <div class="order-date">Placed on {{ item.created_at | date: 'd MMMM y' }}, Delivery Status: {{ item.delivery_status }}</div>
     </div>
-    <button class="link-btn" (click)="goToInvoice(item.order_id)">View Invoice</button>
+    <!-- <button class="link-btn" (click)="goToInvoice(item.order_id)">View Invoice</button> -->
   </div>
 
   <!-- Content Row -->
@@ -17,7 +17,7 @@
     <div class="left-info">
       <div class="amount">₹{{ item.total_amount }}</div>
       <div class="status">
-        <span class="badge" [ngClass]="item.delivery_status">{{ item.delivery_status }}</span>
+        <!-- <span class="badge">{{ item.delivery_status }}</span> -->
         <span class="delivery">
           {{ item.delivery_date ? ('Delivered on ' + (item.delivery_date | date: 'd MMM y')) : 'Awaiting Delivery' }}
         </span>
@@ -46,7 +46,8 @@
   <!-- Product List (Collapsible) -->
   <div *ngIf="!isCollapsed(item.order_id)" class="order-products" [@fadeExpand]>
     <div *ngFor="let product of item.product" class="product-item">
-      <img *ngIf="product.images?.length! > 0" [src]="getImagePath(product.images![0])" alt="{{ product.name }}" loading="lazy" class="product-img" (error)="onImageError($event)" />
+      <img *ngIf="product.images?.length! > 0" [src]="getImagePath(product.images![0])" alt="{{ product.name }}"
+        loading="lazy" class="product-img" (error)="onImageError($event)" />
 
       <div class="product-details">
         <div class="product-name">{{ product.name }}</div>
@@ -54,9 +55,12 @@
       </div>
 
       <div class="product-actions">
-        <button *ngIf="!product.is_rated" class="review-btn" (click)="reviewProduct(product)">
-          ★ Rate & Review
-        </button>
+        <ng-container *ngIf="item.delivery_status === 'Delivered'">
+          <button *ngIf="!product.is_rated" [disabled]="item.delivery_status !== 'Delivered'" class="review-btn"
+            (click)="reviewProduct(product)">
+            ★ Rate & Review
+          </button>
+        </ng-container>
       </div>
     </div>
   </div>
