--- a/src/app/features/cart/_components/cart-details/cart-details.component.scss
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.scss
@@ -185,7 +185,7 @@ $primary-brown: #682f12;
         }
 
         .discount {
-          color: #d32f2f;
+          color: #ff9800;
         }
       }
     }
